# Vectorium

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  Vectorium.cpp  Vectorium.h  vcpkg.json
UI/: CMakeLists.txt
UI/include/: EngineUIBridge.h
UI/include/Services/UI/: PluginUIService_ImGui.h
UI/include/UI/: ImguiContextManager.h  UI.h  UIServiceManager.h
UI/src/: ImGuiContextManager.cpp  UIServiceManager.cpp
UI/src/Services/UI/: PluginUIService_ImGui.cpp
cmake/: CompilerSettings.cmake
include/: Engine.h  EngineEvent.h  IEngineUIBridge.h  ImguiContextManager.h
include/Core/: DataPacket.h  IDataHandler.h  IPlugin.h  PluginLoading.h
include/DataPacket/: DataPacket.h  DataPacketRegistry.h  IDataHandler.h  IDataPacketHandler.h
include/Logger/: ComponentLogger.h  ILogger.h  LoggablePlugin.h
include/Mocking/: MockLogger.h  MockPluginContext.h
include/Plugin/: IPlugin.h  IPluginContext.h  LoadedPlugin.h  PluginContextImpl.h  PluginContextPolicy.h  PluginInstance.h  PluginManager.h  PluginManagerConfig.h  PluginRuntimeContext.h
include/Services/: IService.h  IServiceSpecialisations.h  ServiceContainer.h  ServiceId.h  ServiceRegistry.h
include/Services/Logging/: ILogger.h  ILoggerNullService.h  LogLevel.h  PluginLogger.h  SpdLogger.h  UILogSink.h
include/Services/Mocking/: MockLogger.h  MockPluginContext.h
include/Services/REST/: IPluginRESTService.h  IPluginRESTServiceImpl.h  IRestClient.cpp  IRestClient.h  PluginRESTServiceFactory.h  PluginRESTService_HttpLib.h  PluginRestService_Cpr.h  PluginRestService_HttpLib.h  RestClient_Cpr.h  RestClient_HttpLib.h
include/Task/: TaskQueue.h
include/Utils/: range_utils.h
plugins/: CMakeLists.txt
plugins/GPS/: CMakeLists.txt  GPS_Plugin.cpp  GPS_Plugin.h
plugins/NumberGenerator/: CMakeLists.txt  NumberGenerator_Plugin.cpp  NumberGenerator_Plugin.h
plugins/NumberLogger/: CMakeLists.txt  NumberLogger_Plugin.cpp  NumberLogger_Plugin.h
plugins/PolygonIO/: CMakeLists.txt  PolygonIO.cpp  PolygonIO.h
src/: CMakeLists.txt  DataPacketRegistry.cpp  Engine.cpp  LoadedPlugin.cpp  PluginContextImpl.cpp  PluginInstance.cpp  PluginLoading.cpp  PluginManager.cpp  PluginRuntimeContext.cpp
src/Logger/: CMakeLists.txt  ComponentLogger.cpp  ILogger.cpp  LoggablePlugin.cpp  PluginLogger.cpp  SpdLogger.cpp  SpdLogger.h  UILogSink.cpp
src/Mocking/: CMakeLists.txt  MockLogger.cpp  MockPluginContext.cpp
src/Plugin/: PluginContextPolicy.cpp  PluginRuntimeContext.cpp
src/PluginContexts/: IPluginContext.cpp  PluginRuntimeContext.cpp
src/RestClient/: CMakeLists.txt  RestClient_HttpLib.cpp  RestClient_HttpLib.h
src/Services/: CMakeLists.txt  ServiceContainer.cpp
src/Services/Logging/: CMakeLists.txt  PluginLoggingService_NullObjects.cpp  SpdLogger.cpp
src/Services/Mocking/: CMakeLists.txt
src/Services/REST/: CMakeLists.txt  PluginRESTServiceFactory.cpp  PluginRESTService_HttpLib.cpp  PluginRESTService_NullObjects.cpp  PluginRestService_Cpr.cpp  PluginRestService_HttpLib.cpp  RestClient_Cpr.cpp  RestClient_HttpLib.cpp
src/Services/UI/: CMakeLists.txt  ImGuiContextManager.cpp
ui/: CMakeLists.txt  EngineUIBridge.cpp  EngineUIBridge.h  UI.cpp  UI.h  UILogSink.cpp  UILogSink.h  imgui_glfw.cpp
ui/include/: EngineUIBridge.h
ui/include/Services/UI/: IPluginUIService.h  IUIContextProvider.h  IUIService.h  UIContextProvider.h  UIService_ImGui.h
ui/include/UI/: PluginUIHelpers.h  UI.h  UIServiceManager.h
ui/src/: EngineUIBridge.cpp  ImGuiContextManager.cpp  UI.cpp  UIServiceManager.cpp
ui/src/Services/UI/: PluginUIService_ImGui.cpp  PluginUIService_NullObjects.cpp  UIContextProvider.cpp  UIService_ImGui.cpp
